# bc4py_hash

./: Cargo.toml  README.md  build.rs
src/: hashs.rs  lib.rs  plotfile.rs  poc.rs  seekfile.rs
src/poc/: mod.rs  plotfile.rs
src/x16s/: README.md  x16s.c  x16s.h
src/yespower/: README.md  setup.py  sha256.c  yespower-opt.c  yespower.c
