[package]
name = "bc4py_hash"
version = "0.1.0"
authors = ["namuyan <thhjuu@yahoo.co.jp>"]
edition = "2018"
license = "MIT"
description = "bc4py crypto hash functions library"
repository = "https://github.com/namuyan/bc4py_hash"
readme = "README.md"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
hex = "0.4"
