[package]
name = "bc4py_hash"
version = "0.1.2"
authors = ["namuyan <thhjuu@yahoo.co.jp>"]
edition = "2018"
license = "MIT"
description = "bc4py crypto hash functions library"
repository = "https://github.com/namuyan/bc4py_hash"
readme = "README.md"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
hex = "0.4"
regex = "1"
etcommon-bigint = "0.2.10"
num_cpus = "1.0"
blake2b_simd = "0.5" # will be changed to blake3

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
tempfile = "3.1"
