[package]
name = "bc4py_hash"
version = "0.1.3"
authors = ["namuyan <thhjuu@yahoo.co.jp>"]
edition = "2018"
license = "MIT"
description = "bc4py crypto hash functions library"
repository = "https://github.com/namuyan/bc4py_hash"
readme = "README.md"
build = "build.rs"

# do not include the default features
# optionally cherry-pick individual features
default-features = false

[lib]
crate-type = ["rlib"]

[features]
default = ["hashs", "poc", "progress-bar"]
hashs = ["libc"]
poc = ["regex", "etcommon-bigint", "blake2b_simd"]
progress-bar = []

[dependencies]
hex = "0.4"
num_cpus = "1.0"
libc = {version = "0.2", optional = true}
regex = {version = "1", optional = true}
etcommon-bigint = {version = "0.2.10", optional = true}
# will be changed to blake3
blake2b_simd = {version = "0.5", optional = true}

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
tempfile = "3.1"
